Colaboratory를 통해 생성됨

--- a/test2.ipynb
+++ b/test2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "test2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNVNbatZsCpgA6NEU+ZqSSa",
+      "authorship_tag": "ABX9TyPYMmycEvbpG5UvFq0Ak3Mr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -48,6 +48,29 @@
       ],
       "source": [
         "print(\"hello suhyun\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"goodbye suhyun\")"
+      ],
+      "metadata": {
+        "id": "ImLHbvTBVcnM",
+        "outputId": "bc0552b4-059c-4a90-d51b-fa35d4cc768b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "goodbye suhyun\n"
+          ]
+        }
       ]
     }
   ]
